--- a/README.adoc
+++ b/README.adoc
@@ -147,7 +147,7 @@ The [hotspot=from file=0]`FROM` instruction initializes a new build stage
 and indicates the parent image from which your image is built.
 If you don't need a parent image, then use `FROM scratch`, which makes your image a base image. 
 
-In this case, you’re using the `openliberty/open-liberty:full-java11-openj9-ubi` image as your parent image, 
+In this case, you’re using the `icr.io/appcafe/open-liberty:full-java11-openj9-ubi` image as your parent image, 
 which comes with the latest Open Liberty runtime.
 
 The [hotspot=copy file=0]`COPY` instructions are structured as `COPY` 
