--- a/README.adoc
+++ b/README.adoc
@@ -140,21 +140,22 @@ A [hotspot file=0]`.dockerignore` file is available to you in the `start` direct
 
 The Open Liberty Maven plug-in includes a `devc` goal that builds a Docker image, mounts the required directories, binds the required ports, and then runs the application inside of a container. This development mode, known as dev mode, also listens for any changes in the application source code or configuration and rebuilds the image and restarts the container as necessary.
 
+ifdef::cloud-hosted[]
+In this IBM Cloud environment, you need to pre-create the ***logs*** directory by running the following commands:
+
+```bash
+mkdir -p /home/project/guide-docker/start/target/liberty/wlp/usr/servers/defaultServer/logs
+chmod 777 /home/project/guide-docker/start/target/liberty/wlp/usr/servers/defaultServer/logs
+```
+endif::[]
+
+
 Build and run the container by running the `devc` goal from the `start` directory:
 
-ifndef::cloud-hosted[]
 [role='command']
 ```
 mvn liberty:devc
 ```
-endif::[]
-
-ifdef::cloud-hosted[]
-```bash
-chmod 777 /home/project/guide-docker/start/target/liberty/wlp/usr/servers/defaultServer/logs
-mvn liberty:devc
-```
-endif::[]
 
 After you see the following message, your application server in dev mode is ready:
 [role="no_copy"]
