--- a/README.adoc
+++ b/README.adoc
@@ -157,7 +157,7 @@ Build and run the container by running the `devc` goal from the `start` director
 mvn liberty:devc
 ```
 
-After you see the following message, your application server in dev mode is ready:
+After you see the following message, your Liberty instance is ready in dev mode:
 [role="no_copy"]
 ----
 **************************************************************
