Change server to runtime or instance

--- a/README.adoc
+++ b/README.adoc
@@ -117,7 +117,7 @@ The [hotspot=from file=0]`FROM` instruction initializes a new build stage and in
 
 In this case, you’re using the `icr.io/appcafe/open-liberty:kernel-slim-java11-openj9-ubi` image as your parent image, which comes with the latest Open Liberty runtime.
 
-The [hotspot=copy file=0]`COPY` instructions are structured as `COPY` `[--chown=<user>:<group>]` `<source>` `<destination>`. They copy local files into the specified destination within your Docker image. In this case, the Liberty's configuration file that is located at `src/main/liberty/config/server.xml` is copied to the `/config/` destination directory.
+The [hotspot=copy file=0]`COPY` instructions are structured as `COPY` `[--chown=<user>:<group>]` `<source>` `<destination>`. They copy local files into the specified destination within your Docker image. In this case, the Liberty configuration file that is located at `src/main/liberty/config/server.xml` is copied to the `/config/` destination directory.
 
 === Writing a .dockerignore file
 
